# swagger.json
@@ -2763,7 +2763,15 @@
       "CreateTenantUserRequest": {
         "type": "object",
         "properties": {
+          "userName": {
+            "type": "string",
+            "nullable": true
+          },
           "email": {
+            "type": "string",
+            "nullable": true
+          },
+          "phoneNumber": {
             "type": "string",
             "nullable": true
           },
@@ -3320,6 +3328,18 @@
       "UpdateTenantUserRequest": {
         "type": "object",
         "properties": {
+          "userName": {
+            "type": "string",
+            "nullable": true
+          },
+          "email": {
+            "type": "string",
+            "nullable": true
+          },
+          "phoneNumber": {
+            "type": "string",
+            "nullable": true
+          },
           "fullName": {
             "type": "string",
             "nullable": true
